crates/roughly/tests/snapshots/test_format__subset2.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        foo[[x ]]\n        foo[[x,   y]]\n        foo[[1, 2 ]]\n        foo[[x=1  , ,y  =3,4]]\n        foo[[  ]]\n        foo[[ , ]]\n        foo[[, ,]]\n        foo[[ x, ]]\n        foo[[x,,]]\n        foo[[,x ]]\n        foo[[,,x]]\n        foo[[x, ,y]]\n        foo[[,,x,,y,,]]\n        foo[[ #foo\n        1,2,3\n        ]]\n        foo[[ #foo\n        #bar\n        1,2,3\n        #baz\n        ]]\n        foo[[ #foo\n        ,,a\n        ]]\n    \"#}).unwrap()"
---
foo[[x]]
foo[[x, y]]
foo[[1, 2]]
foo[[x = 1,, y = 3, 4]]
foo[[]]
foo[[, ]]
foo[[,, ]]
foo[[x, ]]
foo[[x,, ]]
foo[[, x]]
foo[[,, x]]
foo[[x,, y]]
foo[[,, x,, y,, ]]
foo[[ # foo
  1,
  2,
  3
]]
foo[[ # foo
  # bar
  1,
  2,
  3
  # baz
]]
foo[[ # foo
  ,
  ,
  a
]]
