crates/roughly/tests/snapshots/test_format__switch_fallthrough.snap
---
source: src/format.rs
expression: "fmt(indoc!\n{\n    r#\"\n            switch(foo,\n                x = 1,\n                \"y\" = 2,\n                z = ,\n                3\n            )\n        \"#\n})"
---
switch(
  foo,
  x = 1,
  "y" = 2,
  z = ,
  3
)
