crates/roughly/tests/snapshots/test_format__unary_operator.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        !a\n        +a\n        -a\n        foo(!a, +   b)\n        foo(- a , bar)\n        !\n        a\n        -  b\n        -42\n        + 42\n        !TRUE\n        ~foo\n        -foo + bar\n        -  (foo + bar)\n        ! foo && bar\n        ~  foo | bar\n    \"#}).unwrap()"
---
!a
+a
-a
foo(!a, +b)
foo(-a, bar)
!a
-b
-42
+42
!TRUE
~foo
-foo + bar
-(foo + bar)
!foo && bar
~ foo | bar
