crates/roughly/tests/snapshots/test_format__while_statement-10.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        while ( # comment\n        condition) {}\n\n        while ( condition # comment\n        ) {}\n    \"#}).unwrap()"
---
while ( # comment
  condition
) {}

while (
  condition # comment
) {}
