crates/roughly/tests/snapshots/test_format__while_statement-3.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        while(foo(\n        bar)) {baz}\n    \"#}).unwrap()"
---
while (foo(
  bar
)) {
  baz
}
