crates/roughly/tests/snapshots/test_format__while_statement-4.snap
---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n            while ({ foo; bar }) { baz }\n            while ({ foo;\n            bar }) { baz }\n        \"#\n}).unwrap()"
---
while ({ foo; bar }) {
  baz
}
while ({
  foo
  bar
}) {
  baz
}
