crates/roughly/tests/snapshots/test_format__while_statement-9.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        while (condition) {}\n\n        while (condition\n        ) {}\n\n        while (\n        condition) {}\n\n        while (\n        condition\n        ) {}\n    \"#}).unwrap()"
---
while (condition) {}

while (condition) {}

while (
  condition
) {}

while (
  condition
) {}
