crates/roughly/tests/snapshots/test_format__while_statement.snap
---
source: tests/test_format.rs
expression: "format_str(indoc!\n{\n    r#\"\n        while(x < 10)\n        { print(x)\n            x <- x + 1\n        }\n        while (x < 10) { #foo\n            print(x) }\n        while (x < 10)\n        #foo\n        {\n            print(x)\n        }\n    \"#\n}).unwrap()"
---
while (x < 10) {
  print(x)
  x <- x + 1
}
while (x < 10) { # foo
  print(x)
}
while (x < 10)
# foo
{
  print(x)
}
